# axum-ddd-start

./: .env  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  docker-compose.yml
application/: Cargo.toml
application/src/: lib.rs
application/src/service/: user_service.rs
application/src/use_case/: user_use_case.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs
devops/config/: app-configmap.yml
devops/deploy/: app-deploy.yml  postgres-deploy.yml  redis-deploy.yml
devops/pod/: app-pod.yml  nginx-pod.yml  postgres-pod.yml  redis-pod.yml  worker-app-pod.yml
devops/service/: app-service.yml  postgres-service.yml  redis-service.yml
doc/: README.html
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/event/: order_event.rs
domain/src/event/event_bus/: user_event_bus.rs
domain/src/model/: order.rs  user.rs
domain/src/repositories/: command_order_repository.rs  command_user_repository.rs  query_order_repository.rs  query_user_repository.rs  user_repository.rs
domain/src/service/: command_user_service.rs  query_order_service.rs  query_user_service.rs  user_service.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/database/: connection.rs  db_connection.rs  redis_connection.rs
infrastructure/src/entities/: mod.rs  order.rs  prelude.rs  product.rs  user.rs  usernake.rs
infrastructure/src/persistence/: command_user_repository_impl.rs  query_user_repository_impl.rs  user_repository_impl.rs
infrastructure/tests/: db_test.rs  redis_test.rs
interface/: Cargo.toml
interface/src/: lib.rs
interface/src/adapter/: handler.rs  order_handler.rs  user_handler.rs
interface/src/api/: api.rs
interface/src/common/: response.rs
interface/src/config/: log.rs
interface/src/routers/: order_route.rs  order_routes.rs  user_routes.rs
logs/: app.log.2024-09-24  app.log.2024-09-25  app.log.2024-09-26  app.log.2024-09-27  app.log.2024-09-28  app.log.2024-09-29
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
tests/: db_test.rs  user_test.rs
