[package]
name = "domain"
version = "0.1.0"
edition = "2021"

[dependencies]
# domain不应该依赖于任何层
sea-orm = { workspace = true }

serde = { workspace = true }
anyhow = { workspace = true }
tracing={workspace = true}
thiserror = { workspace = true }
common = {workspace = true}
tokio = {workspace = true}