[package]
name = "interface"
version = "0.1.0"
edition = "2021"

[dependencies]
# 依赖于application层uoqu数据和业务逻辑的处理结果
application = { workspace = true }
domain = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sea-orm = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum-extra = { workspace = true }
mime = { workspace = true }
tower-http = { workspace = true }
thiserror = { workspace = true }
tracing-appender = { workspace = true }
